[package]
name = "valkyrie-campaign-manager"
version = "1.0.8-beta.1"
authors = ["Valkyrie Protocol"]
edition = "2018"
description = "A Campaign Manager contract for Valkyrie Protocol - create campaign and manage global variable for campaign"
license = "Apache-2.0"
repository = "https://github.com/valkyrieprotocol/contracts.git"
homepage = "https://valkyrieprotocol.com"
documentation = "https://docs.valkyrieprotocol.com"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
schemars = { version = "0.8.3" }
cw2 = { version = "0.8.1" }
cw20 = { version = "0.8.1" }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.1", features = ["iterator"] }
valkyrie = { path = "../../packages/valkyrie", default-features = false, version = "1.0.8-beta.1" }
terraswap = "2.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
terra-cosmwasm = { version = "2.2.0" }
