[package]
name = "valkyrie-governance"
version = "0.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Common valkyrie types"
license = "Apache-2.0"
repository = "https://github.com/valkyrieprotocol/contracts.git"
homepage = "https://valkyrieprotocol.com"
documentation = "https://docs.valkyrieprotocol.com"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
schemars = { version = "0.8.3" }
cw20 = { version = "0.7.0" }
cosmwasm-std = { version = "0.15.2" }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }
valkyrie = { path = "../../packages/valkyrie", version = "0.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.15.2" }
terra-cosmwasm = { version = "2.1.0" }
