[package]
name = "valkyrie-lp-staking"
version = "1.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Staking contract for valkyrie Protocol - distribute rewards to stakers"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.7.0" }
cosmwasm-std = { version = "0.15.2" }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }
valkyrie = { version = "0.1.0", path = "../../packages/valkyrie" }
schemars = "0.8.3"
terraswap = "2.3.0"
terra-cosmwasm = { version = "2.1.0" }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.15.2"
cosmwasm-storage = { version = "0.15.2", features = ["iterator"] }
