[package]
name = "valkyrie-lp-staking"
version = "1.0.8-beta.0"
authors = ["Valkyrie Protocol"]
edition = "2018"
description = "A Staking contract for Valkyrie Protocol - distribute rewards to stakers"
license = "Apache-2.0"
repository = "https://github.com/valkyrieprotocol/contracts.git"
homepage = "https://valkyrieprotocol.com"
documentation = "https://docs.valkyrieprotocol.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.1", features = ["iterator"] }
cw20 = { version = "0.8.1" }
valkyrie = { version = "1.0.8-beta.0", path = "../../packages/valkyrie" }
schemars = "0.8.3"
terraswap = "2.4.0"
terra-cosmwasm = { version = "2.2.0" }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
