[package]
name = "valkyrie-qualifier-base"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A qualifier base contract for Valkyrie Protocol"
license = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
schemars = { version = "0.8.3" }
cosmwasm-std = { version = "0.15.2", features = ["staking"] }
cosmwasm-storage = { version = "0.15.2", features = ["iterator"] }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }
cw20 = { version = "0.7.0" }
thiserror = { version = "1.0.26" }
valkyrie-qualifier = { path = "../../packages/valkyrie_qualifier", default-features = false, version = "0.1.0" }
terra-cosmwasm = { version = "2.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.15.2" }
