[package]
name = "cw20"
version = "0.8.1"
authors = ["Valkyrie Protocol"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/valkyrieprotocol/valkyrie-contracts.git"
homepage = "https://valkyrieprotocol.com"
documentation = "https://docs.valkyrieprotocol.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.8.1" }
cw20 = { version = "0.8.1" }
cw20-base = { version = "0.8.1", features = ["library"]}
cw-storage-plus = { version = "0.8.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
